--- a/Novozhilov_testovoe.ipynb
+++ b/Novozhilov_testovoe.ipynb
@@ -18,13 +18,7 @@
     "\n",
     "Предложите и посчитайте ещё 2-3 показателя, характеризующих качество групп привлекаемой аудитории. Проанализируйте полученные результаты и опишите суть различий между группами.\n",
     "Расчётную часть задачи выполните на  Python.\n",
-    "К заданию приложите ваш скрипт и краткий отчёт, включающий анализ и выводы."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "К заданию приложите ваш скрипт и краткий отчёт, включающий анализ и выводы.\n",
     "<div id =\"nachalo\">"
    ]
   },
@@ -16684,7 +16678,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='summary'></a>"
+    " всё. <a id='summary'></a>"
    ]
   },
   {
