--- a/Novozhilov_testovoe.ipynb
+++ b/Novozhilov_testovoe.ipynb
@@ -18,14 +18,15 @@
     "\n",
     "Предложите и посчитайте ещё 2-3 показателя, характеризующих качество групп привлекаемой аудитории. Проанализируйте полученные результаты и опишите суть различий между группами.\n",
     "Расчётную часть задачи выполните на  Python.\n",
-    "К заданию приложите ваш скрипт и краткий отчёт, включающий анализ и выводы.\n"
+    "К заданию приложите ваш скрипт и краткий отчёт, включающий анализ и выводы.\n",
+    "<a id =\"nachalo\"> </a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Вычисления. <br> или можно сразу<br> [перейти к выводам с картинками](#summary)"
+    "### Вычисления. <br></br> или можно сразу<br></br> [перейти к выводам с картинками](#summary)"
    ]
   },
   {
