--- a/Novozhilov_testovoe.ipynb
+++ b/Novozhilov_testovoe.ipynb
@@ -26,7 +26,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Вычисления. <br></br> или можно сразу<br></br>"
+    "### Вычисления.###           \n",
+    "или можно сразу   \n",
+    "[перейти к выводам с картинками](#summary)"
    ]
   },
   {
