--- a/Novozhilov_testovoe.ipynb
+++ b/Novozhilov_testovoe.ipynb
@@ -18,16 +18,16 @@
     "\n",
     "Предложите и посчитайте ещё 2-3 показателя, характеризующих качество групп привлекаемой аудитории. Проанализируйте полученные результаты и опишите суть различий между группами.\n",
     "Расчётную часть задачи выполните на  Python.\n",
-    "К заданию приложите ваш скрипт и краткий отчёт, включающий анализ и выводы."
+    "К заданию приложите ваш скрипт и краткий отчёт, включающий анализ и выводы.\n",
+    "<a id=\"nachalo\"></a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id =\"nachalo\"></a>\n",
-    "### Вычисления.\n",
-    "### или можно сразу  [перейти к выводам с картинками](#summary)"
+    "### Вычисления.  \n",
+    "### или можно сразу [перейти к выводам с картинками](#summary)"
    ]
   },
   {
