--- a/Novozhilov_testovoe.ipynb
+++ b/Novozhilov_testovoe.ipynb
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# утнановка pandas_profiling: pip install pandas-profiling\n",
+    "# уcтановка pandas_profiling: pip install pandas-profiling\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from urllib.parse import urlsplit, parse_qs\n",
